--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-
 body{
     width: 100%;
     margin: 0;
@@ -6,11 +5,10 @@ body{
     font-family: sans-serif;
 }
 
-
 nav{
     width: 100%;
     padding-left: 80px;
-    background-color: #FAFAFA;
+    background:#FAFAFA;
     opacity: 0.9;
 
     display: flex;
@@ -52,26 +50,23 @@ nav .menu a:hover{
     border-bottom: 3px solid #000;
 }
 
-nav .menu button{
-    margin:0 40px;
-    border-radius: 8px;
-    border: none;
-    padding: 10px 15px;
-    background-color: #000;
-    color:#fff;
+nav .menu i{
+    margin-left: 40px;
+}
 
+nav .span-search{
     position: relative;
 }
 
-nav button::after{
+nav .span-search::after{
     content: '';
     width: 3px;
     height: 32px;
     background-color:#000;
     
     position:absolute;
-    top: 1px;
-    left:130%;
+    top: -5px;
+    left:135%;
     transform: rotateY(90);
 }
 
@@ -113,7 +108,7 @@ nav button::after{
 
 .top-selling-book h2::before{
     content: '';
-    width: 3px;
+    width: 5px;
     height: 180px;
     border-radius: 3px;
 
@@ -124,12 +119,12 @@ nav button::after{
 
     transform:rotate(90deg);
     
-    background-color: #000;
+    background:#000
 }
 
 .top-selling-book h2::after{
     content: '';
-    width: 3px;
+    width: 5px;
     height: 180px;
     border-radius: 3px;
 
@@ -140,7 +135,7 @@ nav button::after{
 
     transform:rotate(90deg);
     
-    background-color: #000;
+    background:#000;
 }
 
 .top-selling-book,.new-book{
@@ -150,8 +145,6 @@ nav button::after{
 
     float: left;
 }
-
-
 
 .top-selling-book .top3,.top-selling-book .top6,.top-selling-book .top9,.new-book .new1,.new-book .new2,.new-book .new3{
     margin-left:30px;
@@ -168,8 +161,8 @@ nav button::after{
     padding: 3px 15px;
     margin: 5px 0 0 50px;
     text-decoration: none;
-    color: #fff;
-    background-color: #000;
+    color: #000;
+    background:#EFCB3B;
     border-radius: 5px;
     
     display: block;
@@ -249,12 +242,13 @@ nav button::after{
 .search-bar{
     height: 100px;
     margin-left: 80px;
-    background-color: #d2ad32;
+    background:#EFCB3B;
+    padding: 20px 0 40px 0;
 }
 
 .search-bar input[type="text"]{
-    width: 180px;
-    height: 25px;
+    width: 280px;
+    height: 30px;
 }
 
 .search-bar input[type="text"]:focus{
@@ -267,13 +261,13 @@ nav button::after{
 }
 
 .search-bar{
-    margin:80px 0 40px 0;
+    margin:50px 0 40px 0;
     text-align: center;
 }
 
 .search-bar-by button{
-    width: 100px;
-    padding: 6px;
+    width: 70px;
+    padding: 8px;
 }
 
 .new-book{
@@ -312,10 +306,10 @@ nav button::after{
 
 .book-categories{
     width: 150px;
-    height: 740px;
+    height: 745px;
     margin-top: 70px;
-    padding: 30px;
-    background: grey;
+    padding: 33px;
+    background:#EFCB3B;
     float: left;
 }
 
@@ -351,26 +345,21 @@ nav button::after{
 
 .review-section h2::after{
     content: '';
-    width: 150px;
+    width: 230px;
     height: 4px;
-    background-color: #000;
-    border-radius: 3px;
+    background:#EFCB3B;
+    border-radius: 1px;
 
     position: absolute;
     top:40px;
     right: 0;
-    left: 600px;
+    left: 560px;
     bottom: 0;
-    
-    
-
 }
 
 .review-section .review-aera input[type="text"]:focus,.review-section .review-aera textarea:focus{
     outline: none;
 }
-
-
 
 .review-aera{
     margin-left: 300px;
@@ -380,6 +369,16 @@ nav button::after{
     width: 200px;
     height: 25px;
     margin-bottom: 20px;
+    color: inherit;
+
+    display: block;
+}
+
+.review-aera input[type="submit"]{
+    padding: 5px 20px;
+    background-color: #EFCB3B;
+    border: none;
+    border-radius: 3px;
 
     display: block;
 }
@@ -387,7 +386,7 @@ nav button::after{
 .footer{
     display: flex;
     
-    background-color: #FAFAFA;
+    background:#EFCB3B;
 }
 
 .a-for-footer{
@@ -430,6 +429,8 @@ nav button::after{
 }
 
 .copyright{
+    margin-top: 50px;
+
     display: flex;
     justify-content: center;
 }
